# threads_ifmo

./: .gitignore  README.md
hpc_lab2/: CMakeLists.txt  main.cpp
hpc_lab4/: CMakeLists.txt  kmeans.cpp  main.cpp  plot_clusters.py  utils.cpp  utils.hpp
intro/: CMakeLists.txt  integral.hpp  integral_mt_test.cpp  mt_utils.hpp
lab01/: CMakeLists.txt  integral_mt_test.cpp  mt_utils.hpp
lab1/: CMakeLists.txt  filesystem.hpp  matrix.hpp  matrix_omp_test.cpp  plot.py  run_test.py
lab2/: data_generator.py  input_data.txt  jacobi.hpp  m.txt  main.cpp  output_example.json  p.txt  python_output_example  run.bat
lab2/mpi_jacobi/mpi_jacobi/: CMakeLists.txt  jacobi.hpp  main.cpp  numeric_traits.hpp  utils.hpp
lab3/hypersort/: CMakeLists.txt  main.cpp
lab3/make_qsort_great_again/: CMakeLists.txt  hyperqsort.hpp  main.cpp  qsort.hpp  utils.hpp
lab4/: CMakeLists.txt  dijkstra.hpp  main.cpp  utils.cpp  utils.hpp
lab5/: Dockerfile  README.md  docker-compose.yaml
lab5/conf/hadoop/: core-site.xml  hadoop-env.sh  spark-env.sh
lab5/conf/spark/master/: spark-defaults.conf
lab5/conf/spark/worker/: spark-defaults.conf
lab5/scripts/: run-over-yarn.sh  run-standalone.sh  start.sh  stop.sh
lab5/src/: pom.xml
lab5/src/src/main/java/lab5spark/: App.java  LogData.java
